# binarbot

./: .gitmodules  Binarbot.cxx  CMakeLists.txt  binarbot.cxx  main.cpp
inc/Binarbot/: BinanceManager.h  CurlManager.h  Database.h
inc/Binarbot/Types/: Candle.h  CandleDatabase.h  CandleInterval.h
inc/binarbot/: BinanceManager.h  CurlManager.h  EnumReflector.h  Enumerations.h  NonCopyable.h  Singleton.h  Utils.h
src/Binarbot/: BinanceManager.cpp  CurlManager.cpp  Database.cpp
src/Binarbot/Types/: Candle.cpp  CandleDatabase.cpp
src/binarbot/: BinanceManager.cpp  CurlManager.cpp  EnumReflector.cpp  Singleton.cpp
